--- a/style_Login.css
+++ b/style_Login.css
@@ -1,20 +1,17 @@
 body {
-    overflow: hidden;
+   background-color: rgb(0, 0, 0);
   }
 
-  .tab-content {
-    background-color: #fff;
-    padding: 1rem;
-  }
-
-  .tab-content label::first-letter {
-    text-transform: uppercase;
-
-  }
   .cuadro-izq-fuera{
     max-width: 30%;
-    margin-left: 0;
-
+    margin-left: 10px;
+    box-shadow:0 0 5px purple, 0 0 15px purple, 0 0 30px purple, 0 0 50px purple;
+    animation: parpadear 5s infinite backwards;
   }
   
+  @keyframes parpadear {
+    to {
+      box-shadow: 0 0 5px greenyellow, 0 0 15px greenyellow, 0 0 30px greenyellow, 0 0 50px greenyellow;
+    }
+  }
   
