--- a/style_Login.css
+++ b/style_Login.css
@@ -1,17 +1,59 @@
 body {
    background-color: rgb(0, 0, 0);
+   background: radial-gradient(circle at 49% 0, #2d2f3d, #070714 51%, #060613 52%);
   }
+
+header{
+  color: white;
+  
+}
+
+
+.login-box {
+  background-color: rgba(128, 128, 128, 0.2); 
+  width: 550px; 
+  height: 420px; 
+  color:aliceblue;
+  margin-top: 15%;
+  margin-left: 48%;
+  font-family: sans-serif;
+  position: absolute;
+  border-radius: 6%;
+}
 
   .cuadro-izq-fuera{
     max-width: 30%;
-    margin-left: 10px;
+    margin-top: 1%;
+    margin-left: 3%;
     box-shadow:0 0 5px purple, 0 0 15px purple, 0 0 30px purple, 0 0 50px purple;
     animation: parpadear 5s infinite backwards;
   }
-  
   @keyframes parpadear {
     to {
       box-shadow: 0 0 5px greenyellow, 0 0 15px greenyellow, 0 0 30px greenyellow, 0 0 50px greenyellow;
     }
   }
-  
+
+  .cuadro-izq-fuera-interior{
+    margin-top: 15px;
+    margin-left: 15px;
+    color:greenyellow;
+    position:absolute;
+    font-family: sans-serif;
+    background-color: rgb(128, 128, 128, 0.5);
+    border-radius: 20%;
+    width: 10%;
+    height: 10%;
+  }
+  .izquierda{
+    color:red;
+    display: inline;
+  }
+  .centro{
+    color:red;
+    display: inline;
+  }
+  .derecha{
+    color:greenyellow;
+    display: inline;
+  }
