--- a/style_PaginaPrincipal.css
+++ b/style_PaginaPrincipal.css
@@ -3,7 +3,8 @@ body {
       background-color: #222;
       color: #fff;
       margin: 0;
-      padding: 0; background-color: greenyellow;
+      padding: 0;
+      background-color: greenyellow;
       
     }
 
@@ -62,20 +63,33 @@ body {
     }
 
     .video-container {
-        display: flex;
-        justify-content: space-evenly;
-        flex-wrap: wrap;
-      }
-  
-      .video-player {
-        width: 300px;
-        height: 169px;
-        margin: 20px;
-      }
+      display: flex;
+      justify-content: center; /* Centra horizontalmente los video players */
+      align-items: center; /* Centra verticalmente los video players */
+      flex-wrap: wrap;
+    }
+    
+    .video-player {
+      flex: 1 0 300px; /* Hace que todos los video players tengan el mismo ancho */
+      height: 0;
+      padding-bottom: 56.25%; /* Proporción 16:9 para que los video players sean responsive */
+      position: relative;
+      margin: 20px;
+      overflow: hidden;
+    }
+    
+    .video-player iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+    
 
       .search-panel {
         display: flex;
-        justify-content: flex-end;
+        justify-content: space-evenly;
         align-items: center;
         padding: 10px;
         background-color: purple;
@@ -97,29 +111,7 @@ body {
         cursor: pointer;
       }
 
-      .search-panel {
-      display: flex;
-      justify-content: flex-end;
-      align-items: center;
-      padding: 10px;
-      background-color: purple;
-      color: #ffffff;
-    }
-
-    .search-panel input[type="text"] {
-      display: none;
-      padding: 5px;
-      margin-left: 10px;
-      width: 200px;
-    }
-
-    .search-panel.active input[type="text"] {
-      display: block;
-    }
-
-    .search-panel .search-icon {
-      cursor: pointer;
-    }
+      
   
       @media only screen and (max-width: 768px) {
         .video-player {
